<resources>
    <string name="app_name">Stop Kontak Cerdas</string>
    <string name="title_main">Smart Stop Kontak</string>
    <string name="sub_title_main">Terminal</string>
    <string name="all">TODO</string>
    <string name="title_power">Power</string>
    <string name="title_energy">Energy</string>
    <string name="title_voltage">Voltage</string>
    <string name="title_current">Current</string>
    <string name="power">0,00kW</string>
    <string name="energy">0,00kWh</string>
    <string name="voltage">0,00V</string>
    <string name="current">0,00A</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="electric">electric icon</string>
    <string name="electric_1">Electric 1</string>
    <string name="electric_2">Electric 2</string>
    <string name="electric_3">Electric 3</string>
    <string name="profile_image">Profile Image</string>
    <string name="name">Muhammad Yazid Fauzan</string>
    <string name="email">muhammadyazidfauzan@gmail.com</string>
    <string name="google_sheet">Google Sheet</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="title_activity_theme">Theme Setting</string>
</resources>