<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MonitorFragment">

    <ProgressBar
        android:id="@+id/powerProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_circular"
        android:indeterminate="false"
        android:max="3840000"
        android:progressDrawable="@drawable/ic_circular_progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/powerProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/powerProgressBar"
        app:layout_constraintStart_toStartOf="@+id/powerProgressBar"
        app:layout_constraintTop_toTopOf="@+id/powerProgressBar">

        <TextView
            android:id="@+id/powerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/power"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titlePowerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_power"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/energyProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_circular"
        android:indeterminate="false"
        android:max="64000"
        android:progressDrawable="@drawable/ic_circular_progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutEnergy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/energyProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/energyProgressBar"
        app:layout_constraintStart_toStartOf="@+id/energyProgressBar"
        app:layout_constraintTop_toTopOf="@+id/energyProgressBar">

        <TextView
            android:id="@+id/energyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/energy"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleEnergyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_energy"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/voltageProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_circular"
        android:indeterminate="false"
        android:max="240000"
        android:progressDrawable="@drawable/ic_circular_progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/powerProgressBar" />

    <LinearLayout
        android:id="@+id/linearLayoutVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/voltageProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/voltageProgressBar"
        app:layout_constraintStart_toStartOf="@+id/voltageProgressBar"
        app:layout_constraintTop_toTopOf="@+id/voltageProgressBar">

        <TextView
            android:id="@+id/voltageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/voltage"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleVoltageTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_voltage"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/currentProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_circular"
        android:indeterminate="false"
        android:max="10000"
        android:progressDrawable="@drawable/ic_circular_progress_bar"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/energyProgressBar" />

    <LinearLayout
        android:id="@+id/linearLayoutCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/currentProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/energyProgressBar"
        app:layout_constraintStart_toStartOf="@+id/currentProgressBar"
        app:layout_constraintTop_toTopOf="@+id/currentProgressBar">

        <TextView
            android:id="@+id/currentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleCurrentTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_current"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="215dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="430dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="185dp" />

</androidx.constraintlayout.widget.ConstraintLayout>